# ROS2-DDSConfig-Optimizer

./: .gitignore  README.md  pyproject.toml
data/knowledge_base/: fast_dds_complete_params.json
data/knowledge_base/cyclonedds/: performance_critical_params.json
data/knowledge_base/fastdds/: performance_critical_params.json
data/templates/: fastdds_config_template.xml  user_requirements_template.xml
docs/superpowers/plans/: 2026-07-01-cyclonedds-support-plan.md
docs/superpowers/specs/: 2026-07-01-cyclonedds-support-design.md
example/: README.md  cyclonedds_config.xml  example_benchmark.py  fast-dds-latency-param.xml  user_requirements.xml
example/src/pipeline_launch/: CMakeLists.txt  package.xml
example/src/pipeline_launch/launch/: pubsub.launch.py
example/src/publisher/: CMakeLists.txt  package.xml
example/src/publisher/include/publisher/: publisher_component.hpp
example/src/publisher/src/: publisher_component.cpp
example/src/subscriber/: CMakeLists.txt  package.xml
example/src/subscriber/include/subscriber/: subscriber_component.hpp
example/src/subscriber/src/: subscriber_component.cpp
scripts/: test_all_components.sh
src/dds_optimizer/: __init__.py  main.py  models.py
src/dds_optimizer/backends/: __init__.py  base.py  registry.py
src/dds_optimizer/backends/cyclonedds/: __init__.py  backend.py  generator.py  validator.py
src/dds_optimizer/backends/fastdds/: __init__.py  backend.py
src/dds_optimizer/benchmark/: __init__.py  launcher.py  results_parser.py
src/dds_optimizer/config/: __init__.py  deployer.py  validator.py
src/dds_optimizer/dashboard/backend/: api.py
src/dds_optimizer/environment/: collector.py  ros2_api.py
src/dds_optimizer/llm/: __init__.py  llm_client.py  prompt_builder.py
src/dds_optimizer/optimizer/: __init__.py  optimization_loop.py
src/dds_optimizer/requirements/: __init__.py  parser.py
src/dds_optimizer/utils/: file_utils.py  logger.py
src/fastdds_optimizer/: main.py  models.py
src/fastdds_optimizer/benchmark/: launcher.py
src/fastdds_optimizer/config/: deployer.py  generator.py  validator.py
src/fastdds_optimizer/dashboard/: __init__.py
src/fastdds_optimizer/dashboard/backend/: __init__.py  api.py  data_store.py
src/fastdds_optimizer/dashboard/frontend/: index.html
src/fastdds_optimizer/environment/: __init__.py  collector.py  ros2_api.py  validator.py
src/fastdds_optimizer/llm/: llm_client.py  prompt_builder.py  response_parser.py
src/fastdds_optimizer/optimizer/: evaluator.py  feedback_builder.py  optimization_loop.py
src/fastdds_optimizer/requirements/: parser.py  validator.py
src/fastdds_optimizer/utils/: __init__.py  file_utils.py  logger.py
tests/fixtures/: sample_benchmark_result.json  sample_requirements.xml
tests/unit/: test_backend_base.py  test_backend_registry.py  test_benchmark_env.py  test_benchmark_results_parser.py  test_config_generator.py  test_cyclonedds_generator.py  test_cyclonedds_validator.py  test_deployer.py  test_fastdds_generator.py  test_llm_client.py  test_llm_response_parser.py  test_optimization_loop.py  test_prompt_builder_backend.py  test_prompt_builder_topology.py  test_requirements_parser.py  test_ros2_api.py
