[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastdds-optimizer"
version = "0.1.0"
description = "AI-driven FastDDS configuration optimizer for ROS2 performance tuning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "ROS2 DDSConfig Optimizer" }
]
keywords = ["fastdds", "ros2", "optimization", "dds", "performance"]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "psutil>=5.9.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "catkin-pkg>=1.1.0",
    "em>=0.4.0",
    "requests>=2.32.5",
    "numpy>=2.4.4",
]

[project.scripts]
fastdds-optimizer = "fastdds_optimizer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fastdds_optimizer"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
