[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ROS2-DDSConfig-Optimizer"
version = "0.1.0"
description = "AI-driven DDS configuration optimizer for ROS2 performance tuning"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause-Clear" }
authors = [
    { name = "Na Song" }
]
keywords = ["fastdds", "cyclonedds", "ros2", "optimization", "dds", "performance"]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "psutil>=5.9.0",
    "requests>=2.32.5",
    "defusedxml>=0.7.1",
]

[project.scripts]
dds-optimizer = "dds_optimizer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dds_optimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.12.0",
]